--- a/oauth2-server/pom.xml
+++ b/oauth2-server/pom.xml
@@ -5,22 +5,21 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>spring-cloud</artifactId>
         <groupId>club.avence.springcloud</groupId>
+        <artifactId>spring-cloud</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>mall-security</artifactId>
-
-    <name>mall-security</name>
+    <name>oauth2-server</name>
+    <artifactId>oauth2-server</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
