--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>mall-web-b</module>
         <module>mall-web-feign</module>
         <module>mall-web-ribbon</module>
+        <module>oauth2-server</module>
         <module>sleuth</module>
         <module>stream-producer</module>
         <module>stream-consumer</module>
@@ -45,8 +46,8 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <sentinel.version>1.6.3</sentinel.version>
-        <spring-boot.version>2.1.4.RELEASE</spring-boot.version>
-        <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
+        <spring-boot.version>2.2.6.RELEASE</spring-boot.version>
+        <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
         <spring-cloud-alibaba.version>2.1.0.RELEASE</spring-cloud-alibaba.version>
     </properties>
 
