--- a/oauth2-server/src/main/resources/application.yml
+++ b/oauth2-server/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     name: oauth2-server
   security:
     user:
-      name: productApp
-      password: aa3sd#gk
+      name: admin
+      password: admin
       roles:
         - User
