--- a/config-center-client/src/main/resources/bootstrap.yml
+++ b/config-center-client/src/main/resources/bootstrap.yml
@@ -1,7 +1,10 @@
+server:
+  port: 8060
+
 eureka:
   client:
     service-url:
-      defaultZone: http://admin:admin@eureka-a:8083/eureka, http://admin:admin@eureka-b:8084/eureka
+      defaultZone: http://admin:admin@eureka-a:8080/eureka, http://admin:admin@eureka-b:8082/eureka
 
 spring:
   cloud:
